Add HTML structure and styles for homepage

--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
 <h1> Welcome to NepalTAK online news Portal </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Welcome to Nepal Tak after some time the news portal will be published</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      background: linear-gradient(135deg, #0078ff, #00c6ff);
+      color: #fff;
+      font-family: "Segoe UI", Arial, sans-serif;
+      text-align: center;
+      overflow: hidden;
+    }
+    h1 {
+      font-size: 2.8rem;
+      margin-bottom: 0.5rem;
+      animation: fadeIn 1.2s ease-in-out;
+    }
+    p {
+      font-size: 1.2rem;
+      margin-bottom: 1.5rem;
+      opacity: 0.9;
+      animation: fadeIn 2s ease-in-out;
+    }
+    a {
+      display: inline-block;
+      text-decoration: none;
+      color: #0078ff;
+      background-color: #fff;
+      padding: 12px 24px;
+      border-radius: 30px;
+      font-weight: bold;
+      transition: 0.3s;
+      animation: fadeIn 2.5s ease-in-out;
+    }
+    a:hover {
+      background-color: rgba(255,255,255,0.8);
+      transform: translateY(-3px);
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    footer {
+      position: absolute;
+      bottom: 20px;
+      font-size: 0.9rem;
+      opacity: 0.8;
+    }
+  </style>
+</head>
+<body>
+  <h1>Welcome to Nepal Tak after some time the news portal will be published</h1>
+  <p>Thanks for visiting <strong>nepaltak.com</strong></p>
+  <a href="#">Explore More</a>
+  <footer>© 2025 Dipendra Sah. All rights reserved.</footer>
+</body>
+</html>
