--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<h1> Welcome to NepalTAK online news Portal </h1>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -68,5 +67,101 @@
   <p>Thanks for visiting <strong>nepaltak.com</strong></p>
   <a href="#">Explore More</a>
   <footer>© 2025 Dipendra Sah. All rights reserved.</footer>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Welcome to NepalTak</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      background: linear-gradient(135deg, #e53935, #1565c0);
+      color: #fff;
+      font-family: "Poppins", sans-serif;
+      overflow: hidden;
+      text-align: center;
+    }
+
+    /* NepalTak Logo */
+    .logo {
+      font-size: 3rem;
+      font-weight: 800;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+      background: linear-gradient(90deg, #fff 0%, #ffe57f 50%, #fff 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: gradientMove 3s ease-in-out infinite;
+      margin-bottom: 10px;
+    }
+
+    @keyframes gradientMove {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    h1 {
+      font-size: 2rem;
+      margin-top: 10px;
+      animation: fadeIn 1.5s ease-in-out;
+    }
+
+    p {
+      font-size: 1.1rem;
+      margin: 10px 0 20px 0;
+      opacity: 0.9;
+      animation: fadeIn 2s ease-in-out;
+    }
+
+    a {
+      display: inline-block;
+      text-decoration: none;
+      color: #e53935;
+      background-color: #fff;
+      padding: 12px 28px;
+      border-radius: 25px;
+      font-weight: 600;
+      transition: 0.3s;
+      animation: fadeIn 2.5s ease-in-out;
+    }
+
+    a:hover {
+      background-color: rgba(255,255,255,0.9);
+      transform: translateY(-3px);
+    }
+
+    footer {
+      position: absolute;
+      bottom: 20px;
+      font-size: 0.9rem;
+      opacity: 0.8;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+  </style>
+</head>
+<body>
+  <div class="logo">NepalTak</div>
+  <h1>Welcome to NepalTak</h1>
+  <p>Your digital gateway to Nepal.</p>
+  <a href="#">Explore Now</a>
+  <footer>© 2025 NepalTak. All rights reserved.</footer>
 </body>
 </html>
