Add HTML structure and styles to index.html
Added HTML structure and styling for the page.

--- a/index.html
+++ b/index.html
@@ -163,4 +163,29 @@
   <p>Your digital gateway to Nepal.</p>
   <a href="#">Explore Now</a>
 </body>
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Nepal Tak</title>
+  <style>
+    body {
+      background-color: #0b1233;
+      color: white;
+      text-align: center;
+      font-family: Arial, sans-serif;
+      margin-top: 100px;
+    }
+    img {
+      width: 250px;
+    }
+  </style>
+</head>
+<body>
+  <img src="nepaltak-logo.png" alt="Nepal Tak Logo">
+  <h1>Welcome to Nepal Tak</h1>
+  <p>Stay updated with the latest from Nepal and around the world.</p>
+</body>
+</html>
 </html>
