Refactor index.html for improved structure and styling
Updated HTML structure, improved title and meta tags, and added new CSS classes for styling.

--- a/index.html
+++ b/index.html
@@ -1,251 +1,82 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Welcome to Nepal Tak after some time the news portal will be published</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    body {
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      background: linear-gradient(135deg, #0078ff, #00c6ff);
-      color: #fff;
-      font-family: "Segoe UI", Arial, sans-serif;
-      text-align: center;
-      overflow: hidden;
-    }
-    h1 {
-      font-size: 2.8rem;
-      margin-bottom: 0.5rem;
-      animation: fadeIn 1.2s ease-in-out;
-    }
-    p {
-      font-size: 1.2rem;
-      margin-bottom: 1.5rem;
-      opacity: 0.9;
-      animation: fadeIn 2s ease-in-out;
-    }
-    a {
-      display: inline-block;
-      text-decoration: none;
-      color: #0078ff;
-      background-color: #fff;
-      padding: 12px 24px;
-      border-radius: 30px;
-      font-weight: bold;
-      transition: 0.3s;
-      animation: fadeIn 2.5s ease-in-out;
-    }
-    a:hover {
-      background-color: rgba(255,255,255,0.8);
-      transform: translateY(-3px);
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    footer {
-      position: absolute;
-      bottom: 20px;
-      font-size: 0.9rem;
-      opacity: 0.8;
-    }
-  </style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Nepal Tak - Latest News from Nepal and the World</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Welcome to Nepal Tak after some time the news portal will be published</h1>
-  <p>Thanks for visiting <strong>nepaltak.com</strong></p>
-  <a href="#">Explore More</a>
-  <footer>© 2025 Dipendra Sah. All rights reserved.</footer>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Welcome to NepalTak</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      background: linear-gradient(135deg, #e53935, #1565c0);
-      color: #fff;
-      font-family: "Poppins", sans-serif;
-      overflow: hidden;
-      text-align: center;
-    }
-
-    /* NepalTak Logo */
-    .logo {
-      font-size: 3rem;
-      font-weight: 800;
-      letter-spacing: 2px;
-      text-transform: uppercase;
-      background: linear-gradient(90deg, #fff 0%, #ffe57f 50%, #fff 100%);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: gradientMove 3s ease-in-out infinite;
-      margin-bottom: 10px;
-    }
-
-    @keyframes gradientMove {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
-    h1 {
-      font-size: 2rem;
-      margin-top: 10px;
-      animation: fadeIn 1.5s ease-in-out;
-    }
-
-    p {
-      font-size: 1.1rem;
-      margin: 10px 0 20px 0;
-      opacity: 0.9;
-      animation: fadeIn 2s ease-in-out;
-    }
-
-    a {
-      display: inline-block;
-      text-decoration: none;
-      color: #e53935;
-      background-color: #fff;
-      padding: 12px 28px;
-      border-radius: 25px;
-      font-weight: 600;
-      transition: 0.3s;
-      animation: fadeIn 2.5s ease-in-out;
-    }
-
-    a:hover {
-      background-color: rgba(255,255,255,0.9);
-      transform: translateY(-3px);
-    }
-
-    footer {
-      position: absolute;
-      bottom: 20px;
-      font-size: 0.9rem;
-      opacity: 0.8;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-  </style>
-</head>
-<body>
-  <div class="logo">NepalTak</div>
-  <h1>Welcome to NepalTak</h1>
-  <p>Your digital gateway to Nepal.</p>
-  <a href="#">Explore Now</a>
-</body>
-  <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nepal Tak</title>
-  <style>
-    body {
-      background-color: #0b1233;
-      color: white;
-      text-align: center;
-      font-family: Arial, sans-serif;
-      margin-top: 100px;
-    }
-    img {
-      width: 250px;
-    }
-  </style>
-</head>
-<body>
-  <img src="nepaltak-logo.png" alt="Nepal Tak Logo">
-  <h1>Welcome to Nepal Tak</h1>
-  <p>Stay updated with the latest from Nepal and around the world.</p>
-</body>
-</html>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nepal Tak - News Portal</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <header class="header">
-    <img src="assets/nepaltak-logo.png" alt="Nepal Tak Logo" class="logo" />
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">Politics</a>
-      <a href="#">Business</a>
-      <a href="#">Sports</a>
-      <a href="#">Entertainment</a>
-      <a href="#">Contact</a>
-    </nav>
+  <header class="site-header">
+    <div class="container header-inner">
+      <div class="logo">
+        <img src="assets/nepaltak-logo.png" alt="Nepal Tak Logo" />
+        <h1>Nepal Tak</h1>
+        <p class="tagline">Latest News from Nepal and the World</p>
+      </div>
+      <nav class="main-nav">
+        <a href="#">Home</a>
+        <a href="#">Politics</a>
+        <a href="#">Business</a>
+        <a href="#">Sports</a>
+        <a href="#">Entertainment</a>
+        <a href="#">Contact</a>
+      </nav>
+    </div>
   </header>
 
   <main class="container">
-    <section class="headline">
-      <img src="assets/hero.jpg" alt="Main news" />
-      <div>
-        <h1>Top headline: Nepal’s latest breaking news goes here</h1>
-        <p>By Admin • 21 Oct 2025 • Kathmandu</p>
-      </div>
+    <section class="hero">
+      <article class="hero-article">
+        <a href="article.html">
+          <img src="assets/hero.jpg" alt="Top story">
+          <h1>Top story headline goes here — example news title</h1>
+        </a>
+        <p class="meta">By Admin · 21 Oct 2025 · Kathmandu</p>
+      </article>
+      <aside class="top-list">
+        <h3>Trending</h3>
+        <ul>
+          <li><a href="article.html">Why this matters: short trend headline</a></li>
+          <li><a href="article.html">Another trending story</a></li>
+          <li><a href="article.html">Local update: quick headline</a></li>
+        </ul>
+      </aside>
     </section>
 
     <section class="news-grid">
-      <article>
-        <img src="assets/thumb1.jpg" alt="">
-        <h2><a href="article.html">News Headline 1</a></h2>
-        <p>Short intro of the article goes here...</p>
+      <article class="card">
+        <a href="article.html"><img src="assets/thumb1.jpg" alt=""></a>
+        <h2><a href="article.html">News headline 1</a></h2>
+        <p class="meta">By Reporter · 20 Oct 2025</p>
+        <p>Short summary of the article for readers to decide...</p>
       </article>
 
-      <article>
-        <img src="assets/thumb2.jpg" alt="">
-        <h2><a href="article.html">News Headline 2</a></h2>
-        <p>Brief intro for this article...</p>
+      <article class="card">
+        <a href="article.html"><img src="assets/thumb2.jpg" alt=""></a>
+        <h2><a href="article.html">News headline 2</a></h2>
+        <p class="meta">By Reporter · 19 Oct 2025</p>
+        <p>Short summary of the article for readers to decide...</p>
       </article>
 
-      <article>
-        <img src="assets/thumb3.jpg" alt="">
-        <h2><a href="article.html">News Headline 3</a></h2>
-        <p>Short description about the news topic...</p>
+      <article class="card">
+        <a href="article.html"><img src="assets/thumb3.jpg" alt=""></a>
+        <h2><a href="article.html">News headline 3</a></h2>
+        <p class="meta">By Reporter · 18 Oct 2025</p>
+        <p>Short summary of the article for readers to decide...</p>
       </article>
     </section>
+
+    <footer class="footer">
+      <div class="container">
+        <p>&copy; <span id="year"></span> Nepal Tak. All rights reserved.</p>
+        <p>Contact: contact@nepaltak.com</p>
+      </div>
+    </footer>
   </main>
 
-  <footer>
-    <p>&copy; <span id="year"></span> Nepal Tak. All Rights Reserved.</p>
-  </footer>
-
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
+<script>
+  document.getElementById('year').textContent = new Date().getFullYear();
+</script>
 </body>
 </html>
