Update footer contact information and copyright

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 
     <footer class="footer">
       <div class="container">
-        <p>&copy; <span id="year"></span> Nepal Tak. All rights reserved.</p>
-        <p>Contact: contact@nepaltak.com</p>
+        <p>&copy; <span id="year"></span> Dipendra Kumar Sah. All rights reserved.</p>
+        <p>Contact: nepaltak.media@gmail.com</p>
       </div>
     </footer>
   </main>
